# uv-docker-example

./: pyproject.toml  talk.md
