[project]
name = "uv-docker-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi[standard]>=0.112.2"]

[project.optional-dependencies]
cpu = ["torch"]
gpu = ["torch"]

[project.scripts]
hello = "uv_docker_example:hello"

[dependency-groups]
dev = ["ruff>=0.6.2", "fastapi-cli>=0.0.5"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
torch = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu124"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
